# ChangeLog for dev-perl/Devel-GlobalDestruction
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-GlobalDestruction/ChangeLog,v 1.23 2012/09/02 17:16:49 tove Exp $

  02 Sep 2012; Torsten Veller <tove@gentoo.org>
  -Devel-GlobalDestruction-0.40.0.ebuild,
  -Devel-GlobalDestruction-0.60.0.ebuild,
  -Devel-GlobalDestruction-0.80.0.ebuild:
  Cleanup

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org>
  Devel-GlobalDestruction-0.90.0.ebuild:
  Marked ~ppc-aix, bug #432288

*Devel-GlobalDestruction-0.90.0 (09 Aug 2012)

  09 Aug 2012; Torsten Veller <tove@gentoo.org>
  +Devel-GlobalDestruction-0.90.0.ebuild:
  Version bump

  09 Aug 2012; Brent Baude <ranger@gentoo.org>
  Devel-GlobalDestruction-0.50.0.ebuild:
  Marking Devel-GlobalDestruction-0.50.0 ppc for bug 418805

*Devel-GlobalDestruction-0.80.0 (06 Aug 2012)

  06 Aug 2012; Torsten Veller <tove@gentoo.org>
  +Devel-GlobalDestruction-0.80.0.ebuild:
  Version bump

  04 Aug 2012; Johannes Huber <johu@gentoo.org>
  Devel-GlobalDestruction-0.50.0.ebuild:
  Stable for x86, wrt bug #418805

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org>
  Devel-GlobalDestruction-0.50.0.ebuild:
  Stable for amd64, wrt bug #418805

*Devel-GlobalDestruction-0.70.0 (27 Jul 2012)

  27 Jul 2012; Torsten Veller <tove@gentoo.org>
  +Devel-GlobalDestruction-0.70.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Devel-GlobalDestruction-0.60.0 (14 Jun 2012)

  14 Jun 2012; Torsten Veller <tove@gentoo.org>
  +Devel-GlobalDestruction-0.60.0.ebuild:
  Version bump

*Devel-GlobalDestruction-0.50.0 (29 Apr 2012)

  29 Apr 2012; Torsten Veller <tove@gentoo.org>
  +Devel-GlobalDestruction-0.50.0.ebuild:
  Version bump

  31 Mar 2012; Torsten Veller <tove@gentoo.org>
  -Devel-GlobalDestruction-0.02.ebuild:
  Cleanup

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Devel-GlobalDestruction-0.40.0.ebuild: