@@ -6,13 +6,13 @@ DIST Devel-GlobalDestruction-0.07.tar.gz 49370 SHA256 bab4ff91a46ba563219c7c5a29
 DIST Devel-GlobalDestruction-0.09.tar.gz 50675 SHA256 b598d81c0a41bb4ec70e818f6c7088d3951c0136edf68721132c1f1310da79c3 SHA512 ce8336c55b6fd62b4d2958d8c66dc69818edd3dfeaff7de766c377d933bca3f18fc95d853dbf03fdb4e7027845bd534a34716dc86704332520384efc1696aa2f WHIRLPOOL f00625710ffcd0629edbd4e28f355798fc6bc0aed1ac097d789560c4b1b4d029407e3d09104b3f39ea6b625ce77d9b73fc0876940c754fddbda3d359d0cb12ad
 EBUILD Devel-GlobalDestruction-0.50.0.ebuild 511 SHA256 1baabbc73f90c1eb7f210b6bddc3bebe1ff43ab5a8a40b41cddc1fd66cba96bf SHA512 0ef43196b855b22ce1db78998b8234eafca968b7870cba26b1adb9b9d1a28469ef3d66e2fbcbb08c2a3e19ccfb0a0c6aa5645386e6c9862258d8e0597aa35de0 WHIRLPOOL 9a1bd37212e667f39f0a16932efd6e77eacbbd1eb18a781915ac105a64ed34892b9ae897b47fb85d06e6aad12b74b234c64823142964c699b3c543f824c3ce8c
 EBUILD Devel-GlobalDestruction-0.70.0.ebuild 514 SHA256 8f7816461ae87588e98b8928e34735d6723ffcb516377293b1ed34a9c305752a SHA512 ecadeabe7638e6d6707180192452d4b8522d29a01772a62b6880ca4444f6e213941dcbd1c0024e38df71ec867db9823ee3fccefda403526b459911082bff0d18 WHIRLPOOL b82f7e38f3f06715b098b04f930c530513fd33d248a2d0a518f42e56c4ab5092fa151dd5a95be09a099bf2f9e0f30a82f0c47e207cfc1ef0a4ee3e11ce4185a1
-EBUILD Devel-GlobalDestruction-0.90.0.ebuild 534 SHA256 8f8bf987d66294b3e82d9ff15258943f7de1b370f05af7a3d273738b4f978812 SHA512 f89f6908b942d596c36085ea0e4992dd192936ae2bc8a29dbcc964d476ba46eb9fa1fffa6c9bc9eedcf1c7081513b0f103dde0709198d35772c1a5834a43d3e4 WHIRLPOOL 4e546993f78c045f4b49762a0204ffe604a55714d7612ad67ecd3af311a9a55c022d683076ed535d0f6f11656be0ee54428966765ae5f260727433930cffa440
-MISC ChangeLog 3346 SHA256 d57ea7dbd6d17c1cbec46e8d375c9d3f4a907884b375790fc2eee0fbe1e1a8a1 SHA512 db72e16a965fcb4c5654c2017cecef7182ea9ed03846ffac1961b3d2b783360f3904d9a452a5905506dad3340a39b29f095dca1524141105d5605585926a999e WHIRLPOOL 4b83cb0adac27266144aad26d9cc4d646aa9e9f7b1629e1e56f0eca095c5a773bdd07851752deedb17f1cac4e0b6d7f7764e9b28ef402bf9dac9343801854bef
+EBUILD Devel-GlobalDestruction-0.90.0.ebuild 547 SHA256 9a94518def53be11fa537048be579083bd129ca8c68bc242230a13b2cebf74a4 SHA512 9202a9c41eb446eb514ddec0f933b962789a0df42b40e01a7bcd6d89c78955a2905a098261c710960dc61cae3fdd9181ccc56d8421fe5597e997871613492bcb WHIRLPOOL cf5599cdc03b6f991ed409c5b9b608f609c35efebf2180e670637a19a61e7214875fb9a6efa0e6285bb87a4992b54727a068e0699fcee823aba6440b268ce09a
+MISC ChangeLog 3464 SHA256 8f27e1eb8c6afb46e887e85750b5c58014276c792cdcab46a5ef3fbfbb0608c6 SHA512 27b3e7487c9ab3803643ea1885b3db6f940e99c654716b6637701f8a88fc234a33b0c94b826c68d6d7374fdbc66415dafed2c6ec1a8086be4a0b91740c2c3135 WHIRLPOOL e0d15c2d98f5b4d6e26e9d9de49daca55b655d85a8d2fa3f7bf9f27a546c0f39bcfa8d7ac7fe2fd4bb53c82ca16417924bfa64f8ed716d304522fe410fa6e1f5
 MISC metadata.xml 320 SHA256 44bd5fabab5e6b264ef0a885213004e6fbf880693ca3d8c7754ca888a0ecfb19 SHA512 41257a0027c3f00f4aa14663c57bc177bd531b9ebed286a6b176bf188407256488e256a10f280654c0757cb6e23ddbe197dcdf66f1634bb96c0eac03e9bd3cde WHIRLPOOL faac6e48558e6ebd87264d03cdda66371e870e32857ebbac102795eddf00f4cbbfddbf71c7693d7ee853e196240417e41a10b51aa6dc7a36567d92ea8668cfa0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEAREIAAYFAlBDlIYACgkQV3J2n04EauzyRgCgpXmFmil9kFVosrRM45h3rybR
-O4oAn2yrhqDHujH+dNO3vCH0kITzEfGG
-=NCK1
+iEYEAREIAAYFAlBXUykACgkQX3X2B8XHTomqLgCdGmC9b5MPJlpsPhxDoZ6Kt/2I
+cdsAniMxoZDnIS3TFcaNyIQGbE3kZ8JX
+=jZjx
 -----END PGP SIGNATURE-----
