@@ -1,17 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX initdb-mysql.patch 472 RMD160 ae940b59261f78701668918a0f260e5835066afb SHA1 2c4099f63bc766ccfba2f377c0f08e102e3391f3 SHA256 c8ebfbc343182631715c65663d05947d89ce21445b5b16f18872a10eb4873025
-AUX postinstall-en.txt 1351 RMD160 9c9f14512526e8e5fff51bd5c43be0d0940a6097 SHA1 c5550a1b07dee55fa7810d0f3d881935a10fedd7 SHA256 1c5ccbde33bf200f727c53a87f67499328f140b64e8821e50065c872fe8b72f2
-AUX reconfig 357 RMD160 9edb2dc81fc0b02b6146fb712b9bf8e32d489a32 SHA1 92c3160edc80d9cb577a4c044a917603dcbf03f3 SHA256 395a8d5013e87e13e6701c8b1bbc889978cc92186ebe3569e2b1bee9f96b78a7
-DIST lxr-0.9.5.tgz 105230 RMD160 fd6e8ae9c9940083e0550872fb8ac729342aad89 SHA1 89d8292cfa6c006185914588fec1a8b9d77778fd SHA256 5b126b8180a1c56fef5a89b9335a0b5d6e467850bf62b29a9f44b12107a74c8e
-EBUILD lxr-0.9.5.ebuild 2162 RMD160 2c3cef48984f65737324347048511d780e01d5d3 SHA1 d8028afbc830cf58ebb6a6d434f229a6d84f4666 SHA256 15b40269286b3c01a3534c0abdbccf2c11d0ec2bcab95192f4a39924a932003c
-MISC ChangeLog 3568 RMD160 23fd0955fb08e69032b74da090e0ad27450aa852 SHA1 0df0b7c89c3b65245b00d60c368d3bf6f8c56636 SHA256 09808c27191f898d10a1884a6ef7afbe4f3bb5ef79303a7e2d3d99211a4da320
-MISC metadata.xml 314 RMD160 5e9c157bce66269a3f551c2bb6d036b136f00cba SHA1 55fd80fa3a328d573f118a981fcfda53f11c79a1 SHA256 3df2acf1e933b7ed9530eea6f3f8e934e379deccfbdc731b9f2edb7efbe6fbd1
+AUX initdb-mysql.patch 472 SHA256 c8ebfbc343182631715c65663d05947d89ce21445b5b16f18872a10eb4873025 SHA512 e4164c15cbb6e9b6899043e969eca2ae38d95ce42e6a5740a39d901af44fc3523f9177cda832f5b6f654b633968ef01fa76911266795b423129a5c7e57604dff WHIRLPOOL 9b55dba9847a54fcbe6aa7b730d93804aa26769fb3039c0b29fa4d5a47b25ebef953417cec6f241badcac1404bcaefd43daef163a0ed0c85ee6eeffdfe53fe34
+AUX postinstall-en.txt 1351 SHA256 1c5ccbde33bf200f727c53a87f67499328f140b64e8821e50065c872fe8b72f2 SHA512 4730fcc56b8a775d5922883906f9db8ead7a0f3beb8a46ceeb451f8ba273e823fbe328b227da72f39a9dfa926cd93b77c5d27c0d1ba2730afec0c570b1da0006 WHIRLPOOL 10b571d9605cd9b927ecfcc0383ae080b9604f6b1e59ce89deaa5331568a4b58380fb67d7b8391d967acc82e457701bf5e43706186d3e94fa8b2211895eb3e0a
+AUX reconfig 357 SHA256 395a8d5013e87e13e6701c8b1bbc889978cc92186ebe3569e2b1bee9f96b78a7 SHA512 b218ddf830fc1412ab95bd53377f07b76209b2dd7640654618e937355efd716f2374a0a18f97e8f92c06619f8aed6bbc311eb93541ebf088437e40250288f8cd WHIRLPOOL 0365b1faa0c266d8c3369eaaf2808ffd6ee55ef9dcc303a425a5a661b3eba239e2f807bbeecdf33a4ab35c26d87eea536e87f7c31ebc72f2f5ac15b68c228b2d
+DIST lxr-0.9.5.tgz 105230 SHA256 5b126b8180a1c56fef5a89b9335a0b5d6e467850bf62b29a9f44b12107a74c8e
+EBUILD lxr-0.9.5.ebuild 2162 SHA256 15b40269286b3c01a3534c0abdbccf2c11d0ec2bcab95192f4a39924a932003c SHA512 068fff6e186c56e45d9f3c179d782e5c874e048f99bb9d3efff3ceeface655ee13c1e39e031827d25a8354fda428671c8e058346574a884f8d3535920009e356 WHIRLPOOL f545c14bc31734cd8b617b3a978aff9973eeb66bbb08a56df565b3b8b57178461c457fa8be9d1179ad48d6130d47eb644a6e1819207ef5d032b1136d659cfdd1
+MISC ChangeLog 3683 SHA256 260bb6fd9ae07d20d4243b7f7f38ce9f241665a48e575d17c50c6e03195b3da8 SHA512 0a4af0254aeb39d97870b015cdfc6dbb45144b2e7551a6dbd23e0601d44b241f49b590ea9146ea0f4a913ee6b39f39b1ad0396a9f6c295d6c49936bcb003b94d WHIRLPOOL 9195d34df2c933365da1e85a843e0f69d95acb52ee40b13bc59a87a653dcc816549ff478feec5bbfb341a786ef6916ad8a2817b6de0a9cba4f5aab7f20e561ff
+MISC metadata.xml 251 SHA256 f856867639306390e0f4b50557363f4820b5cfaeb5bbae97f44096d97fd0cb9b SHA512 9c079ad0a787d165d63206e0f717d9bd13b8a956be51d425df11e3d12e394bed49a4f25f61df3b0ed8e1f1b3d539ef551937386b75ceceeeaa156f4fa008b104 WHIRLPOOL 72506b63d3d4f3354cddc9df066e328c44058fd04bbc5bb0130002161a11ea74b7f06472629e91cb49be44ddea123583a024c803d06fcb953463d418b42f7dac
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.10 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAkuQtK8ACgkQOeoy/oIi7uz0bACgx1gcqEWf8GD553HR+fHuHCfp
-ApIAoIRRwF/HUzYy/DwHOiNp41LTTt3B
-=wkA6
+iQEcBAEBCAAGBQJQV/XPAAoJEEqz6FtPBkyjWfMH/ip6FwF3LL80ooAByQZ6IAfV
+IJSmTLSO6YM03w1slhceqop5H9l7xp+mB139J18RKZWkf9je37pz9uTfvNMeINzm
+1aV1D+Wx7+mjudI5KYKZtOTdZ0HU8petdtZUVQyD3YXEEdtcmHFSeixlHJKZS+0B
+b28hFJIZkXuh0DKqvu5GC0GbhKl5Bdaep1ajl14N9SldVYjyjbJoJg18C6aXHIre
+ZFM4yRZKWRAhNZp+lWx2gZpUtuqM5ruUP5mZql1rTJ/yW5WEsCIIf3aGtMy0WFos
+61P3+Q0qAZl3gHTWt36K3dcwGN60c+rVdMmETTyWlF+MsX3b5j5TYwsok7MnK3w=
+=PO1X
 -----END PGP SIGNATURE-----
