@@ -2,9 +2,6 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>web-apps</herd>
-<maintainer>
-	<email>web-apps@gentoo.org</email>
-</maintainer>
 <use>
 	<flag name='freetext'>Adds support for freetext search using swish-e</flag>
 </use>
