@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Sub-Exporter-Progressive
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Exporter-Progressive/ChangeLog,v 1.5 2012/09/02 08:10:43 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Exporter-Progressive/ChangeLog,v 1.6 2012/09/17 16:46:11 grobian Exp $
+
+  17 Sep 2012; Fabian Groffen <grobian@gentoo.org>
+  Sub-Exporter-Progressive-0.1.6.ebuild:
+  Marked ~x86-solaris
 
   02 Sep 2012; Torsten Veller <tove@gentoo.org>
   -Sub-Exporter-Progressive-0.1.3.ebuild,
@@ -32,4 +36,3 @@
   +Sub-Exporter-Progressive-0.1.3.ebuild, +metadata.xml:
   Initial commit for Devel-GlobalDestruction. The ebuild depends on
   Sub-Exporter for now
-
