@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/lxr
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/lxr/ChangeLog,v 1.19 2010/03/05 07:37:15 ulm Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/lxr/ChangeLog,v 1.20 2012/09/18 04:17:13 radhermit Exp $
+
+  18 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
+  Remove redundant maintainer from metadata.
 
   05 Mar 2010; Ulrich Mueller <ulm@gentoo.org> lxr-0.9.5.ebuild:
   Update dev-vcs/rcs dependency after package move, bug 56967.
