@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Devel-GlobalDestruction
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-GlobalDestruction/ChangeLog,v 1.23 2012/09/02 17:16:49 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-GlobalDestruction/ChangeLog,v 1.24 2012/09/17 16:43:15 grobian Exp $
+
+  17 Sep 2012; Fabian Groffen <grobian@gentoo.org>
+  Devel-GlobalDestruction-0.90.0.ebuild:
+  Marked ~x86-solaris
 
   02 Sep 2012; Torsten Veller <tove@gentoo.org>
   -Devel-GlobalDestruction-0.40.0.ebuild,
